[package]
name = "bevy_net_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_replicon_snap = { version = "0.2.1", path = "../bevy_replicon_snap" }
bevy = "0.13.1"
anyhow = "1.0.81"
serde = "1.0.197"
rand = "0.8.5"
bevy_replicon = "0.24.1"
bevy_replicon_renet = "0.1.0"
